Bug 390891 - Notes diagram link could not be changed
Summary: Notes diagram link could not be changed
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.24.2 (KDE Applications 17.12.2)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-22 07:44 UTC by Ralf Habacker
Modified: 2018-02-22 08:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.24.3 (KDE Applications 17.12.3)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-02-22 07:44:31 UTC
Note widgets support linking to a diagram, which are triggered by a mouse double click on a note widget containing a diagram link. Currently it is not possible to change/update such a diagram link.

How to reproduce ?
1. start umbrello
2. add a second diagram
3. select the first diagram in the tree view
4. drag and drop the entry for the first diagram into the second diagram
5. create a third diagram named diagram3
6. edit diagram link of created note and enter "Diagram:diagram3"
7. save and double click on the note

What happens ?
The related diagram is not opened

What is expected ?
The related diagram should be opened
Comment 1 Ralf Habacker 2018-02-22 08:40:08 UTC
Git commit 52fe3a6ebf00c89381301e14bbf868246a65a6ca by Ralf Habacker.
Committed on 22/02/2018 at 07:53.
Pushed by habacker into branch 'Applications/17.12'.

Fix 'Notes diagram link could not be changed'

The notes property dialog did not update the diagram link
into the related widget.

Diagram links are created by pasting a diagramm entry
from the tree view into a different diagram or by entering
'Diagram:' followed by the diagram name into a notes widget.
FIXED-IN:2.24.3 (KDE Applications 17.12.3)

M  +8    -0    umbrello/dialogs/notedialog.cpp
M  +34   -0    umbrello/umlwidgets/notewidget.cpp
M  +1    -0    umbrello/umlwidgets/notewidget.h

https://commits.kde.org/umbrello/52fe3a6ebf00c89381301e14bbf868246a65a6ca