Fix 'Notes diagram link could not be changed'

The notes property dialog did not update the diagram link
into the related widget.

Diagram links are created by pasting a diagramm entry
from the tree view into a different diagram or by entering
'Diagram:' followed by the diagram name into a notes widget.

BUG:390891
FIXED-IN:2.24.3 (KDE Applications 17.12.3)